correction ios bug

--- a/src/App.css
+++ b/src/App.css
@@ -921,3 +921,9 @@ body {
 .dark body {
   background-color: #111111;
 }
+
+@media (max-width: 768px) {
+  input, textarea, select {
+    font-size: 16px !important;
+  }
+}
